--- a/src/components/basic.css
+++ b/src/components/basic.css
@@ -1,22 +1,19 @@
 body {
   margin: 0;
-  font-family: 'Philosopher', sans-serif;
   padding-left: 15px;
   padding-right: 15px;
-  color: #c0c8da;
-  background-color: black;
 }
 
-/* font-family: 'Caveat', cursive; */
 li {
   list-style: none;
 }
 
-h1 {
-  font-size: 50px;
-  border-bottom: 1px solid #c0c8da;
+a {
+  text-decoration: none;
 }
 
-h2 {
-  font-size: 35px;
+header {
+  display: flex;
+  justify-content: space-between;
+  background-color: #3f51b5;
 }
