--- a/src/components/UserMenu/userMenu.module.css
+++ b/src/components/UserMenu/userMenu.module.css
@@ -1,4 +1,4 @@
-.link {
+.button {
   display: inline-block;
   color: #3f51b5;
   margin: 10px;
@@ -7,10 +7,13 @@
   background-color: #fff;
 }
 
-.linkActive {
-  composes: link;
-  color: #303f9f;
-  font-size: large;
+.button:hover {
+  transform: scale(1.15);
+  transition-duration: 500ms;
+  cursor: pointer;
+}
+
+.span {
+  color: #fff;
   font-weight: bold;
-  border: 1px solid #303f9f;
 }
