--- a/src/components/ContactListItem/contactListItem.module.css
+++ b/src/components/ContactListItem/contactListItem.module.css
@@ -7,3 +7,9 @@
   font-weight: bold;
   margin-right: 10px;
 }
+
+@media screen and (max-width: 520px) {
+  .contact {
+    font-size: 16px;
+  }
+}
