--- a/src/components/UserMenu/userMenu.module.css
+++ b/src/components/UserMenu/userMenu.module.css
@@ -3,6 +3,7 @@
   color: #3f51b5;
   margin: 10px;
   border: 1px solid #3f51b5;
+  border-radius: 5px;
   padding: 5px 10px;
   background-color: #fff;
 }
@@ -14,6 +15,16 @@
 }
 
 .span {
+  display: inline-block;
+  margin: 10px;
   color: #fff;
   font-weight: bold;
+}
+
+@media screen and (max-width: 520px) {
+  .block {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
